--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
+    "history": "^4.10.1",
     "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.0.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
