--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.0.3",
